Fix link overflow and name

--- a/sifcity/style.css
+++ b/sifcity/style.css
@@ -230,6 +230,9 @@ blockquote {
 #references li {
     text-indent: -2em;
     padding-left: 2em;
+    a {
+        overflow-wrap: anywhere;
+    }
 }
 
 /* ILLUSTRATIONS */
